force-app/main/default/objects/Seat_Lot__c/fields/Event_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Event_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Lookup</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <type>Lookup</type>
</CustomField>