force-app/main/default/objects/Seat_Lot__c/fields/nd_Section__c.field-meta.xml
<CustomField>
    <fullName>nd_Section__c</fullName>
    <label>Section</label>
    <length>10</length>
    <type>Text</type>
</CustomField>