force-app/main/default/objects/Seat_Lot__c/fields/nd_Source_Constituent__c.field-meta.xml
<CustomField>
    <fullName>nd_Source_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Seats (Source Constituent)</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <type>Lookup</type>
</CustomField>