force-app/main/default/objects/Seat_Lot__c/fields/Seat_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Seat_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seat Assignment</label>
    <referenceTo>Seat_Lot_Assignment__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <type>Lookup</type>
</CustomField>