force-app/main/default/objects/Seat_Lot__c/fields/Ticket_Level__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Level__c</fullName>
    <label>Ticket Level</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>