force-app/main/default/objects/Seat_Lot__c/fields/Ticket_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Level_Name__c</fullName>
    <formula>Ticket_Level__r.Name</formula>
    <label>Ticket Level Name</label>
    <type>Text</type>
</CustomField>